# JoblenRetriever

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
frontend/: vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: JobCard.tsx  JobDetail.tsx
sql/: schema.sql
sql/migrations/: 001_add_country_and_sources.sql  002_update_fts_index.sql  003_add_crawler_sources.sql
src/joblen_retriever/: __main__.py  api.py  db.py  models.py  server.py
src/joblen_retriever/crawlers/: description.py  items.py  middlewares.py  pipelines.py  runner.py  settings.py
src/joblen_retriever/crawlers/spiders/: linkedin.py
src/joblen_retriever/scrapers/: base.py  duunitori.py  jobly.py  remotive.py  tyomarkkinatori.py
